--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -134,14 +134,14 @@ header .intro-text .skills {
 
 @media(min-width:768px) {
     .navbar-fixed-top {
-        padding-top: 25px;
+        padding: 0 0;
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
     }
 
     .navbar-fixed-top .navbar-brand {
-        font-size: 2em;
+        font-size: 1.5em;
             color: white;
         
         -webkit-transition: all .3s;
@@ -253,7 +253,7 @@ border-bottom: 6px solid #02FFF6;
 }
 
 section {
-    padding: 100px 0;
+    padding: 10px 0;
 }
 
 section h2 {
