--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -89,7 +89,7 @@ hr.star-primary:after {
 
 header {
     text-align: center;
-    color: black;
+    color: darkgrey;
     background-color: #e2e2e2;
 }
 
@@ -162,35 +162,27 @@ header .intro-text .skills {
 
 .navLinks li a{
  color: white !important;
- background-color: black !important;
+ background-color: darkgrey !important;
 }
 
-#home-link:focus,
-#home-link:hover,
-#home-link .active>a {
+#home-link{
 color: #fff !important;
 border-bottom: 6px solid #FF0000;
 }
 
-#software-lnk:focus,
-#software-link:hover,
-#software-link .active>a {
+#software-link {
 color: #fff !important;
 border-bottom: 6px solid #00E600;
 }
 
-#hardware-link:focus,
-#hardware-link:hover,
-#heardware-link .active>a {
-color: #fff !important;
-border-bottom: 6px solid #ffff00;
-}
-
-#blog-link:focus,
-#blog-link:hover,
-#blog-link .active>a {
+#hardware-link {
 color: #fff !important;
 border-bottom: 6px solid #198CFF;
+}
+
+#blog-link {
+color: #fff !important;
+border-bottom: 6px solid  #ffff00;
 }
 
 .njs-library{
@@ -243,7 +235,7 @@ border-bottom: 6px solid #198CFF;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
-    background-color: black;
+    background-color: darkgrey;
     opacity: 0.7;
 }
 
