--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -165,22 +165,30 @@ header .intro-text .skills {
  background-color: darkgrey !important;
 }
 
-#home-link{
+#home-link:hover,
+#home-link:focus,
+#home-link:active >a{
 color: #fff !important;
 border-bottom: 6px solid #FF0000;
 }
 
-#software-link {
+#software-link:hover,
+#software-link:focus,
+#software-link:active a{
 color: #fff !important;
 border-bottom: 6px solid #00E600;
 }
 
-#hardware-link {
+#hardware-link:hover,
+#hardware-link:focus,
+#hardware-link:active > a {
 color: #fff !important;
 border-bottom: 6px solid #198CFF;
 }
 
-#blog-link {
+#blog-link:hover,
+#blog-link:focus,
+#hardware-link:active >a{
 color: #fff !important;
 border-bottom: 6px solid  #ffff00;
 }
